# KitsuneCraft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  shader.bat
glad/: CMakeLists.txt
glad/include/glad/: gl.h
include/N1ghtTheF0x/: KitsuneCraft.hpp
include/N1ghtTheF0x/KitsuneCraft/: App.hpp  Context.hpp  SDL.hpp  Utils.hpp
include/N1ghtTheF0x/KitsuneCraft/Data/: Mesh.hpp  Texture.hpp  Vertex.hpp
scripts/: create-hpp.mjs
shaders/: default.frag  default.vert
source/: app.cpp  app.hpp  block.cpp  block.hpp  camera.cpp  camera.hpp  context.cpp  math.hpp  opengl.cpp  opengl.hpp  sdl.hpp  texture.cpp
source/shaders/: fragment.hpp  vertex.hpp
source/utils/: sdl.cpp
